--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </tr>                    
                 </tbody>
             </table>
-            <button class="botao-tabela">Limpar Registros</button>
+            <button class="botao-tabela" onclick="deletarRegistros()">Limpar Registros</button>
         </section>
     </main>
 </body>
